tests/badbegin.out
./badbegin.svx:3:7: error: Matching BEGIN command has no survey name
 *end  foo
       ^~~
./badbegin.svx:6:8: error: Survey name doesn't match BEGIN
 *end   bar
        ^~~
./badbegin.svx:8:8: error: Character "<" not allowed in station name (use *SET NAMES to set allowed characters)
 *begin <
        ^
./badbegin.svx:11:5: warning: Survey name omitted from END
 *end
     ^

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 1 warning(s) and 3 error(s) - no output files produced.
